<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/greyLight"
        android:paddingStart="@dimen/app_margin_side"
        android:paddingTop="@dimen/app_margin_top"
        android:paddingEnd="@dimen/app_margin_side"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="@dimen/imageview_profile_size"
            android:layout_height="@dimen/imageview_profile_size"
            android:contentDescription="@string/imageview_profile_contentDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_account_circle" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="นายสุขสำราญ จิตใจดี"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
            app:layout_constraintTop_toTopOf="@+id/imageViewProfile" />

        <TextView
            android:id="@+id/textViewID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PUA0001"
            android:textColor="@color/textGrey"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="@+id/textViewName"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <TextView
            android:id="@+id/textViewContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="โทร. 088-888-8888"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="@+id/textViewName"
            app:layout_constraintTop_toBottomOf="@+id/textViewID" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="ว่าง"
            android:textColor="@color/textGreen"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/labelStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/status_label"
            android:textColor="@color/textGreen"
            android:textSize="@dimen/text_size_big"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewStatus" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/button_setting_size"
            android:layout_height="@dimen/button_setting_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings_grey" />

        <TextView
            android:id="@+id/textViewPeriodTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="30 นาที"
            android:textColor="@color/orange_one"
            android:textSize="@dimen/text_size_small"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageViewProfile"
            app:layout_constraintStart_toStartOf="@+id/imageViewProfile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageButtonAdd"
        android:layout_width="@dimen/button_add_size"
        android:layout_height="@dimen/button_add_size"
        android:layout_marginTop="16dp"
        android:rotation="90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        app:srcCompat="@drawable/ic_add_circle_green" />

    <TextView
        android:id="@+id/textViewPatientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_button_message"
        android:textColor="@color/textGreen"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonAdd" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/time_label"
        android:textColor="@color/textGreen"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:text="@string/name_patient_label"
        android:textColor="@color/textGreen"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/building_label"
        android:textColor="@color/textGreen"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewJob"
        android:layout_width="368dp"
        android:layout_height="111dp"
        android:layout_marginStart="@dimen/app_margin_side"
        android:layout_marginTop="@dimen/margin_section"
        android:layout_marginEnd="@dimen/app_margin_side"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:listitem="@layout/layout_queue_item" />


</androidx.constraintlayout.widget.ConstraintLayout>